# rinha-2026-rust

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  haproxy.cfg  info.json  nginx.conf
src/: data.rs  env.rs  fd.rs  handlers.rs  http.rs  json.rs  knn.rs  main.rs  response.rs  vector.rs
