[package]
name = "rinha-fraud-2026"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "rinha-fraud-2026"
path = "src/main.rs"

[[bin]]
name = "build_index"
path = "src/build_index.rs"

[dependencies]
monoio = { version = "0.2", default-features = false, features = ["iouring", "legacy", "macros"] }
memchr = "2"
mimalloc = { version = "0.1", default-features = false }
aligned-vec = "0.6"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"


[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
debug = 0
overflow-checks = false
incremental = false

[profile.release.package."*"]
opt-level = 3
